--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-MONGOURI="mongodb+srv://Madhurgupta55:uM3mAVgVDJDulhFK@cluster0.jormn3q.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGOURI=""
